--- a/app/index.html
+++ b/app/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="stylesheet" href="./static/reset.css">
+    <link rel="stylesheet" href="./static/animate.css">
     <title>app</title>
   </head>
   <body>
     <div id="app"></div>
-    <p>我更改了</p>
     <!-- built files will be auto injected -->
   </body>
 </html>
